--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
 </head>
-
+    <!-- Header for the page -->
+    <header>Header</header>
+    <!-- The main structure -->
+    <main>Main Content</main>
+    <!-- Page footer -->
+    <footer>Footer</footer>
 <body>
 
 </body>
