--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
     <!-- Header for the page -->
-    <header>Header</header>
+    <header>
+        <a href="index.html"><h1 id="logo">Love Running</h1></a>
+    </header>
     <!-- The main structure -->
     <main>Main Content</main>
     <!-- Page footer -->
