--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
-    <meta name="description" content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park.">
+    <meta name="description"
+        content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park.">
     <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
     <!-- Title -->
     <title>Love Running</title>
@@ -16,9 +17,13 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
+<body>
     <!-- Header for the page -->
     <header>
-        <a href="index.html"><h1 id="logo">Love Running</h1></a>
+        <a href="index.html">
+            <h1 id="logo">Love Running</h1>
+        </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label">X</label>
         <nav>
@@ -32,9 +37,14 @@
     <!-- The main structure -->
     <main>Main Content</main>
     <!-- Page footer -->
-    <footer>Footer</footer>
-<body>
-
+    <footer>
+        <ul>
+            <li><a href="https://facebook.com" target="_blank" rel="noopener"
+                    aria-label="visit our Facebook page(opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+        </ul>
+    </footer>
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/8676b669d3.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
