--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <main>Main Content</main>
     <!-- Page footer -->
     <footer>
-        <ul>
+        <ul id="social-networks">
             <li><a href="https://facebook.com" target="_blank" rel="noopener"
                     aria-label="visit our Facebook page(opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
             </li>
