--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
         </nav>
     </header>
     <!-- The main structure -->
-    <main>Main Content</main>
+    <main>
+        <section id="hero">
+            
+        </section>
+    </main>
     <!-- Page footer -->
     <footer>
         <ul id="social-networks">
