Changed radio button div from id to class HTML

--- a/signup.html
+++ b/signup.html
@@ -49,7 +49,7 @@
                 <input type="email" id="email-address" name="email-address" class="text-input" required>
                 <br>
 
-                <div id="radio-buttons">
+                <div class="radio-buttons">
                     <div>
                         <label for="road">Road</label>
                         <input type="radio" id="road" name="running_prefrence" value="road" required checked>
