--- a/signup.html
+++ b/signup.html
@@ -56,11 +56,11 @@
                     </div>
                     <div>
                         <label for="trail">Trail</label>
-                        <input type="radio" id="trail" name="running_prefrence" value="trail" required checked>
+                        <input type="radio" id="trail" name="running_prefrence" value="trail" required >
                     </div>
                     <div>
                         <label for="both">Both</label>
-                        <input type="radio" id="both" name="running_prefrence" value="both" required checked>
+                        <input type="radio" id="both" name="running_prefrence" value="both" required >
                     </div>
                 </div>
                 <button type="submit" class="join-button">Let's Run!</button>
